[gd_scene load_steps=6 format=3 uid="uid://bedncojmylgkl"]

[ext_resource type="Script" path="res://scenes/ui/select_level_right_panel.gd" id="1_h3v45"]
[ext_resource type="TileSet" uid="uid://b85edn0lxsvdt" path="res://resources/frames.tres" id="1_v70c0"]
[ext_resource type="FontFile" uid="uid://ci0pbhtb65wdp" path="res://assets/CyberpunkCraftpixPixel.otf" id="2_vjyhn"]
[ext_resource type="Texture2D" uid="uid://xdjoheyr8wff" path="res://assets/empty_star.png" id="4_fxh63"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sedut"]

[node name="RightPanel" type="Panel"]
custom_minimum_size = Vector2(120, 292)
theme_override_styles/panel = SubResource("StyleBoxEmpty_sedut")
script = ExtResource("1_h3v45")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_v70c0")
format = 2
layer_0/tile_data = PackedInt32Array(0, 524289, 0, 65536, 524289, 1, 131072, 524289, 1, 196608, 524289, 1, 262144, 524289, 1, 327680, 524289, 1, 393216, 524289, 1, 458752, 524289, 1, 524288, 524289, 2, 524289, 524289, 5, 524290, 524289, 5, 524291, 524289, 5, 1, 524289, 3, 2, 524289, 3, 3, 524289, 3, 458753, 524289, 4, 393217, 524289, 4, 327681, 524289, 4, 262145, 524289, 4, 196609, 524289, 4, 131073, 524289, 4, 65537, 524289, 4, 458754, 524289, 4, 393218, 524289, 4, 327682, 524289, 4, 262146, 524289, 4, 196610, 524289, 4, 131074, 524289, 4, 65538, 524289, 4, 458755, 524289, 4, 393219, 524289, 4, 327683, 524289, 4, 262147, 524289, 4, 196611, 524289, 4, 131075, 524289, 4, 65539, 524289, 4)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_vjyhn")
theme_override_font_sizes/font_size = 15
text = "TITLE"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 56.0
offset_right = 112.0
offset_bottom = 256.0

[node name="Control" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Control"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fxh63")
expand_mode = 2
stretch_mode = 4

[node name="Task0" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_vjyhn")
theme_override_font_sizes/font_size = 8
text = "TITLE"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control2" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Control2"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fxh63")
expand_mode = 2
stretch_mode = 4

[node name="Task1" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_vjyhn")
theme_override_font_sizes/font_size = 8
text = "TITLE"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control3" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GridContainer/Control3"]
custom_minimum_size = Vector2(2.08165e-12, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fxh63")
expand_mode = 2
stretch_mode = 4

[node name="Task2" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_vjyhn")
theme_override_font_sizes/font_size = 8
text = "TITLE"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 240.0
offset_right = 112.0
offset_bottom = 272.0
theme_override_fonts/font = ExtResource("2_vjyhn")
text = "START"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
